# skin-doctor

./: CHANGELOG.md  Dockerfile  Dockerfile.skin-doctor-cp  Dockerfile.skin-doctor-ternary  Dockerfile2  LICENSE  MANIFEST.in  README.md  environment.yml  pyproject.toml  pytest.ini  requirements.txt  setup.py
.github/workflows/: build-container-cp.yml  build-container-ternary.yml  release.yml  test.yml
skin_doctor/: __init__.py  __main__.py  skin_doctor_cp_model.py  skin_doctor_ternary_model.py  version.py
skin_doctor/data/: nerdd.yml  skin_doctor_cp.yml  skin_doctor_ternary.yml
skin_doctor/models/skin_doctor_cp/CPalphaValues/: alphasCali_10_0.csv  alphasCali_10_1.csv  alphasCali_11_0.csv  alphasCali_12_0.csv  alphasCali_12_1.csv  alphasCali_16_0.csv  alphasCali_18_0.csv  alphasCali_1_0.csv  alphasCali_20_1.csv  alphasCali_21_1.csv  alphasCali_22_0.csv  alphasCali_22_1.csv  alphasCali_23_1.csv  alphasCali_24_1.csv  alphasCali_25_1.csv  alphasCali_26_0.csv  alphasCali_27_0.csv  alphasCali_2_0.csv  alphasCali_31_0.csv  alphasCali_34_0.csv  alphasCali_34_1.csv  alphasCali_35_1.csv  alphasCali_36_0.csv  alphasCali_37_0.csv  alphasCali_38_0.csv  alphasCali_3_1.csv  alphasCali_40_0.csv  alphasCali_40_1.csv  alphasCali_41_0.csv  alphasCali_41_1.csv  alphasCali_43_0.csv  alphasCali_44_1.csv  alphasCali_45_0.csv  alphasCali_45_1.csv  alphasCali_46_0.csv  alphasCali_46_1.csv  alphasCali_48_0.csv  alphasCali_49_0.csv  alphasCali_49_1.csv  alphasCali_4_1.csv  (+58 more)
skin_doctor/models/skin_doctor_cp/cp_alpha_values/: alphasCali_0_0.csv  alphasCali_11_1.csv  alphasCali_13_1.csv  alphasCali_14_0.csv  alphasCali_14_1.csv  alphasCali_15_0.csv  alphasCali_1_1.csv  alphasCali_20_0.csv  alphasCali_26_1.csv  alphasCali_27_1.csv  alphasCali_28_0.csv  alphasCali_28_1.csv  alphasCali_29_1.csv  alphasCali_2_1.csv  alphasCali_30_0.csv  alphasCali_30_1.csv  alphasCali_31_1.csv  alphasCali_32_0.csv  alphasCali_35_0.csv  alphasCali_36_1.csv  alphasCali_39_0.csv  alphasCali_39_1.csv  alphasCali_42_0.csv  alphasCali_42_1.csv  alphasCali_44_0.csv  alphasCali_48_1.csv  alphasCali_4_0.csv  alphasCali_50_1.csv  alphasCali_55_0.csv  alphasCali_56_0.csv  alphasCali_5_0.csv  alphasCali_60_0.csv  alphasCali_60_1.csv  alphasCali_63_0.csv  alphasCali_64_1.csv  (+21 more)
skin_doctor/preprocessing/: __init__.py  canonicalize_tautomer.py  do_smiles_roundtrip.py  neutralize_charges.py  skin_doctor_cp_preprocessing_steps.py  skin_doctor_preprocessing_pipeline.py  skin_doctor_preprocessing_steps.py  strip_salts.py
tests/: conftest.py  steps.py  test_consistent_predictions.py  test_valid_predictions.py
tests/features/: consistent_predictions.feature  valid_predictions.feature
tests/steps/: __init__.py  checks.py  model.py  predictions.py
(+246 files in other folders)
